chore: update required intellij version